--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,20 @@
     <h2><div class="title2">Результат распознавания</div></h2>
     <div class='clear'></div>
     <div class="metanav1"></div>
-    <div class="metanav2"></div>
+    <div class="metanav2">
+        <ul>
+            <li>Паспорт выдан </li>
+            <li>Дата выдачи </li>
+            <li>Код подразделения </li>
+            <li>Серия </li>
+            <li>Фамилия</li>
+            <li>Имя </li>
+            <li>Отчество </li>
+            <li>Пол </li>
+            <li>Дата рождения </li>
+            <li>Место рождения </li>
+        </ul>
+    </div>
     <div class='clear'></div>
     <div class="icon1_block">
         <img src='static/image/documents.png'>
