--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
                 <div class="page">
                   <h1>OCR программа для распознавания</h1>
                 </div>
-                <ul class='menu'>
+                <ul id='menu'>
                     <li>Меню</li>
                     <li>Справка</li>
                 </ul>
